# kea

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-NOTICES.TXT  package-lock.json  package.json  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/sqlx-cli/: devcontainer-feature.json  install.sh  postCreateCommand.sh
.github/: copilot-instructions.md
.github/instructions/: general-instructions.md
.github/workflows/: commit.yml
docs/: architecture.md
kea-client/: .prettierignore  .prettierrc.json  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  ui.config.json  vite.config.ts
kea-client/src/: index.css  index.tsx  main.tsx  queries.ts  routeTree.gen.ts  routes.tsx  types.ts
kea-client/src/api/: api.ts  openapi.g.d.ts  types.ts
kea-client/src/components/: app-header.tsx  checkbox.tsx  diff-viewer.tsx  monaco.tsx  pull-request-details.tsx  segmented-link-control.tsx  separator.tsx  sidebar.tsx
kea-client/src/lib/: utils.ts
kea-client/src/markdown/: markdown-renderer.tsx  markdown-text.tsx  markdown.tsx  types.ts  utils.ts
kea-client/src/monaco/: comment-store.ts  comment-view-zone.ts  content-message-widget.ts  index.ts  monaco-utils.ts  monaco-worker.ts  overlay-message-widget.ts  types.ts  use-resize-monaco.ts
kea-client/src/routes/: __root.tsx  commit.tsx  home.tsx  pull-request.tsx  repo.tsx  settings.tsx
kea-client/src/state/: store.ts
kea-client/src/utils/: git.ts  routes.ts  validate-routes.tsx
kea-server/: Cargo.toml
kea-server/src/: error.rs  lib.rs  main.rs  openapi.rs  state.rs
kea-server/src/client/: github.rs  mod.rs  scm_client.rs
kea-server/src/router/: github.rs  healthcheck.rs  me.rs  mod.rs
kea-server/src/router/authentication/: github.rs  me.rs  mod.rs
kea-server/src/router/middleware/: mod.rs  request_id.rs  utils.rs
kea-server/src/scm/: mod.rs  models.rs  payloads.rs  scm_client.rs
kea-server/src/scm/github/: api.rs  auth.rs  casts.rs  client.rs  error.rs  mod.rs  utils.rs
kea-vscode/: .prettierrc  .vscode-test.mjs  CHANGELOG.md  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
kea-vscode/src/: aliases.ts  extension.ts  git.ts  logger.ts  test-utils.ts  type-utils.ts
kea-vscode/src/account/: account-manager.ts  account.ts  provider.ts  (+2 more)
piskel/: kea-head-dark.piskel  kea-head-light.piskel
src/: App.tsx  Files.tsx  index.css  index.tsx  main.rs  queries.ts  routes.tsx  types.ts
src/editor/: Editor.tsx  MonacoDiffEditor.tsx  utils.ts
src/pages/: PullRequest.tsx  pull-request.tsx
src/routes/: commit.tsx  pull-request.tsx  settings.tsx
(+276 files in other folders)
