[package]
name = "kea-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "tracing"] }
anyhow = "1.0.95"
axum-extra = { version = "0.9.6", features = ["cookie-private"] }
octocrab = "0.42.1"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "cors",
    "fs",
    "redirect",
    "request-id",
    "sensitive-headers",
    "set-header",
    "timeout",
] }
tracing = "0.1.41"
jsonwebtoken = "9.2"
base64 = "0.21"
serde_json = "1.0.134"
secrecy = "0.10.3"
serde = { version = "1.0.216", features = ["derive"] }
dotenvy = "0.15.7"
tower = "0.5.2"
uuid = "1.11.0"
oauth2 = "4.4.2"
time = "0.3.37"
reqwest = "0.12.11"
utoipa-axum = "0.1.3"
utoipa-swagger-ui = { version = "8.1.0", features = ["axum", "vendored"] }
utoipa = "5.3.0"
